Refactor the entire plugin. (1st) Fix things (2nd, 3rd)