@@ -47,7 +47,7 @@ public class PathFinder {
         int currId = current.getId();
         while (cameFrom.containsKey(currId)) {
             currId = cameFrom.get(currId);
-            path.add(0, graph.getNode(currId).getLocation());
+            path.addFirst(graph.getNode(currId).getLocation());
         }
         return path;
     }
@@ -60,16 +60,16 @@ public class PathFinder {
 
         vectors.add(points.get(0).toVector().subtract(points.get(1).toVector().subtract(points.get(0).toVector())));
         for (Location l : points) vectors.add(l.toVector());
-        vectors.add(points.get(points.size() - 1).toVector().add(points.get(points.size() - 1).toVector().subtract(points.get(points.size() - 2).toVector())));
+        vectors.add(points.getLast().toVector().add(points.getLast().toVector().subtract(points.get(points.size() - 2).toVector())));
 
         for (int i = 0; i < vectors.size() - 3; i++) {
             for (int j = 0; j < quality; j++) {
                 double t = (double) j / quality;
                 Vector v = getCatmullRom(t, vectors.get(i), vectors.get(i + 1), vectors.get(i + 2), vectors.get(i + 3));
-                smooth.add(new Location(points.get(0).getWorld(), v.getX(), v.getY(), v.getZ()));
+                smooth.add(new Location(points.getFirst().getWorld(), v.getX(), v.getY(), v.getZ()));
             }
         }
-        smooth.add(points.get(points.size() - 1));
+        smooth.add(points.getLast());
         return smooth;
     }
 
